# ShovelEngine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.cmake/api/v1/reply/: cache-v2-3e4078f2d1bf8180b548.json  cmakeFiles-v1-21966f14e4716e945499.json  codemodel-v2-a43d8189ae87966b79e2.json  index-2022-09-25T13-07-03-0127.json  target-ALL_BUILD-MinSizeRel-f9abd3fd695a5eb89f09.json  target-Minecraft-Debug-562579065bde54075127.json  target-Minecraft-MinSizeRel-9e2fd13f12493635cb8f.json  target-Minecraft-RelWithDebInfo-e53c4c4d2a7de6c7d4f1.json  target-Minecraft-Release-12b1db68a79caea3ce0e.json  toolchains-v1-a907adf2234d1032a8aa.json
assets/ResourcePacks/Vanilla-labPBR-1-3-1-2/: pack.mcmeta
src/: main.cpp
src/Engine/: README.md
src/Engine/Common/: Assert.hpp  Constants.hpp  Exception.hpp  Logger.hpp  Memory.hpp  ProfilerSystems.hpp
src/Engine/Common/Private/: Exception.cpp  Logger.cpp
src/Engine/Core/: Engine.hpp  FileSystem.hpp  ImmutableConfig.hpp  MutableConfig.hpp  Window.hpp
src/Engine/Core/Input/: Input.hpp  InputKeys.hpp  InputManager.hpp  MouseMotion.hpp
src/Engine/Core/Input/Private/: InputManager.cpp
src/Engine/Core/Private/: Engine.cpp  FileSystem.cpp  Window.cpp
src/Engine/Core/Resources/: ResourceCache.hpp  ResourceLoader.hpp  ResourceManager.hpp  StreamableAsset.hpp
src/Engine/Core/Resources/Private/: ResourceManager.cpp
src/Engine/ECS/: Entity.hpp  Scene.hpp  System.hpp
src/Engine/ECS/Components/: CameraComponent.hpp  InputComponent.hpp  MovementComponent.hpp  NameComponent.hpp  NodeComponent.hpp  RelationshipComponent.hpp  RenderComponent.hpp  RootComponent.hpp  TransformComponent.hpp
src/Engine/ECS/Private/: Entity.cpp  Scene.cpp  System.cpp
src/Engine/ECS/Systems/: CameraSystem.hpp  InputSystem.hpp  MovementSystem.hpp  TransformSystem.hpp
src/Engine/ECS/Systems/Private/: CameraSystem.cpp  InputSystem.cpp  MovementSystem.cpp  TransformSystem.cpp
src/Engine/ECS/Utils/: ObjectsCreationUtils.hpp
src/Engine/ECS/Utils/AspectRatioDelegate/: AspectRatioDelegate.hpp  ConstantAspectRatioDelegate.hpp  WindowAspectRatioDelegate.hpp
src/Engine/ECS/Utils/Private/: ObjectsCreationUtils.cpp
src/Engine/Render/: ImGuiImpl.hpp  RenderBatchManager.hpp  RenderContext.hpp  Renderer.hpp  SceneManager.hpp  Window.hpp  WindowConfig.hpp  WindowContext.hpp
src/Engine/Render/ECS/: RenderBatcher.hpp  TextureGPUAllocator.hpp
src/Engine/Render/ECS/Components/: CameraComponent.hpp  MetarialComponent.hpp  RenderComponent.hpp  SkyboxComponent.h  SkyboxComponent.hpp
src/Engine/Render/ECS/Systems/: RenderSystem.hpp  SkyboxSystem.hpp
src/Engine/Render/ECS/Systems/Private/: SkyboxSystem.cpp
src/Engine/Render/Metal/: CommandQueue.hpp  LogicalDevice.hpp  MetalBridge.hpp  RenderPipeline.hpp  RenderPipelineCache.hpp  Renderer.hpp  Window.hpp  WindowContext.hpp
src/Engine/Render/Metal/ECS/: RenderBatcher.hpp
src/Engine/Render/Metal/ECS/Components/: RenderComponent.hpp
src/Engine/Render/Metal/ECS/Private/: RenderBatcher.cpp
src/Engine/Render/Metal/ImGui/: imgui_impl_metal.h  imgui_impl_metal.mm
src/Engine/Render/Metal/Model/: GPUTexture.hpp  GPUTextureUtils.hpp  RenderBatch.hpp  RenderMaterial.hpp  TextureGPUAllocator.hpp
src/Engine/Render/Metal/Model/Private/: GPUTexture.cpp  GPUTextureUtils.cpp  RenderBatch.cpp  RenderMaterial.cpp  TextureGPUAllocator.cpp
src/Engine/Render/Metal/Private/: CommandQueue.cpp  LogicalDevice.cpp  MetalBridge.mm  RenderPipeline.cpp  RenderPipelineCache.cpp  Renderer.cpp  Window.cpp  WindowContext.cpp
src/Engine/Render/Metal/Shaders/: BasicMaterial.metal  PbrDefinitions.h  PbrMaterial.metal  ShaderDefinitions.h  SkyboxDefinitions.h  SkyboxMaterial.metal
src/Engine/Render/Metal/Utils/: Math.hpp
src/Engine/Render/Metal/Utils/Private/: Math.cpp
src/Engine/Render/Model/: AABBox.hpp  Material.hpp  MaterialShader.hpp  Mesh.hpp  Primitive.hpp  RenderBatch.hpp  RenderBatchHandle.h  ShaderParamNames.hpp  Texture.hpp  TextureLoader.hpp  VertexLayout.hpp
src/Engine/Render/Model/Private/: AABBox.cpp  Material.cpp  Mesh.cpp  Primitive.cpp  RenderBatch.cpp  Texture.cpp  TextureLoader.cpp
src/Engine/Render/Model/Utils/: TextureUtils.hpp
src/Engine/Render/Model/Utils/Private/: TextureUtils.cpp
src/Engine/Render/OpenGl/: RenderScene.hpp  Renderer.hpp  ShaderCache.hpp  ShaderProgram.hpp  Window.hpp  WindowContext.hpp
src/Engine/Render/OpenGl/ECS/: RenderBatcher.hpp
src/Engine/Render/OpenGl/ECS/Components/: RenderComponent.hpp
src/Engine/Render/OpenGl/ECS/Private/: RenderBatcher.cpp
src/Engine/Render/OpenGl/ECS/Systems/: RenderSystem.hpp
src/Engine/Render/OpenGl/ECS/Systems/Private/: RenderSystem.cpp
src/Engine/Render/OpenGl/Model/: GPUTexture.hpp  GPUTextureUtils.hpp  RenderBatch.hpp  RenderMaterial.hpp  TextureGPUAllocator.hpp
src/Engine/Render/OpenGl/Model/Private/: GPUTexture.cpp  GPUTextureUtils.cpp  RenderBatch.cpp  RenderMaterial.cpp  TextureGPUAllocator.cpp
src/Engine/Render/OpenGl/Private/: RenderScene.cpp  Renderer.cpp  ShaderCache.cpp  ShaderProgram.cpp  Window.cpp  WindowContext.cpp
src/Engine/Render/OpenGl/Shaders/: BasicShader.frag  BasicShader.vert  PbrShader.frag  PbrShader.vert  SkyboxEquirectangularShader.frag  SkyboxShader.frag  SkyboxShader.vert
src/Engine/Render/Private/: ImGuiImpl.cpp  RenderContext.cpp  Renderer.cpp  SceneManager.cpp  Window.cpp
src/Engine/Tools/: Toolbar.hpp
src/Engine/Tools/Private/: Toolbar.cpp
src/Engine/Tools/Profiling/: FrameTimeProfiler.hpp  ImGuiProfilerRenderer.hpp  ProfilerTask.hpp
src/Engine/Tools/Profiling/Private/: FrameTimeProfiler.cpp
src/Engine/Tools/Scene/: CameraDataViewer.hpp  GltfSceneLoader.hpp  HierarchyViewer.hpp
src/Engine/Tools/Scene/Private/: CameraDataViewer.cpp  GltfSceneLoader.cpp  HierarchyViewer.cpp
src/Engine/Utils/: Assert.hpp  Logger.hpp  String.hpp
src/Engine/Utils/Private/: Logger.cpp
src/Game/: main.cpp
